--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-<!DOCTYPE html><html><head><title>RCBA</title></head><body><h1>Bienvenue chez RCBA</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RCBA - Entreprise Générale du Bâtiment</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background-color: #f9fafb;
+      color: #0A1D37;
+      margin: 0;
+      padding: 0;
+    }
+    header, footer {
+      background-color: #0A1D37;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+    main {
+      padding: 20px;
+      max-width: 960px;
+      margin: auto;
+    }
+    section {
+      margin-top: 40px;
+    }
+    img, video {
+      width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="logo-rcba.png" alt="Logo RCBA" style="max-width: 120px;" />
+    <h1>RCBA - Travaux tous corps d'état à Villenave-d'Ornon</h1>
+    <p>www.rcba-construction.fr</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>Présentation</h2>
+      <p>RCBA est une entreprise générale du bâtiment située à Villenave-d'Ornon. Nous réalisons des travaux tous corps d'état : gros œuvre, second œuvre, démolition et rénovation.</p>
+    </section>
+
+    <section>
+      <h2>Vidéo de Présentation</h2>
+      <video controls poster="images/illustration-animation.png">
+        <source src="videos/presentation.mp4" type="video/mp4" />
+        Votre navigateur ne prend pas en charge la vidéo HTML5.
+      </video>
+    </section>
+
+    <section>
+      <h2>Illustration</h2>
+      <img src="images/illustration-animation.png" alt="Illustration RCBA" />
+    </section>
+
+    <section>
+      <h2>Contact</h2>
+      <p>📍 Avenue Fernand Coin, 33140 Villenave-d'Ornon<br />
+         📞 Contactez-nous dès aujourd’hui pour un devis gratuit.</p>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 RCBA - www.rcba-construction.fr - Tous droits réservés.
+  </footer>
+</body>
+</html>
